tests/fixtures/invalid/bytes_le_none.py
# Cannot compare with <= Bytes and None
x: bool = b"hello" <= None
